@@ -1,20 +1,17 @@
 package com.momo.dylantest.service;
 
 import com.momo.dylantest.api.FmpApi;
+import com.momo.dylantest.mapper.mysql.MysqlDBMapper;
+import com.momo.dylantest.mapper.postgres.PostgresDBMapper;
 import com.momo.dylantest.model.PageResult;
 import com.momo.dylantest.model.dto.CompanyStockDto;
 import com.momo.dylantest.model.dto.api.CompanyStockApiDto;
 import com.momo.dylantest.model.mysql.CompanyStockMysqlPo;
 import com.momo.dylantest.model.postgres.CompanyStockPostgresPo;
-import com.momo.dylantest.repository.mysql.CompanyStockMysqlRepository;
-import com.momo.dylantest.repository.postgres.CompanyStockPostgresRepository;
 import com.momo.dylantest.util.LogUtil;
 import com.momo.dylantest.util.PageConverter;
 import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.validation.annotation.Validated;
@@ -34,9 +31,9 @@ public class CompanyStockService {
     @Resource
     private FmpApi fmpApi;
     @Resource
-    private CompanyStockMysqlRepository companyStockMysqlRepository;
+    private PostgresDBMapper postgresDBMapper;
     @Resource
-    private CompanyStockPostgresRepository companyStockPostgresRepository;
+    private MysqlDBMapper mysqlDBMapper;
     /**
      * 批量插入公司股票數據到 MySQL。
      *
@@ -48,9 +45,9 @@ public class CompanyStockService {
         long start = System.currentTimeMillis();
         List<CompanyStockApiDto> list = fmpApi.searchCompany(companyName);
         List<CompanyStockMysqlPo> listAll = list.parallelStream().map(companyStock -> new CompanyStockMysqlPo(companyStock)).collect(Collectors.toList());
-        long count = companyStockMysqlRepository.count();
+        long count = mysqlDBMapper.findCompanyStockCount();
         long insertStart = System.currentTimeMillis();
-        companyStockMysqlRepository.insertBatchFromJdbc(listAll);
+        mysqlDBMapper.insertBatchCompanyStock(listAll);
         long end = System.currentTimeMillis();
         log.info(LogUtil.info(LogUtil.GATE_FRONT,"insertBatchForMysql","searchCompany消耗時間:"+(insertStart-start)+",count:"+count+",insertBatch消耗時間:"+(end-insertStart)+",筆數:"+listAll.size()));
     }
@@ -62,13 +59,13 @@ public class CompanyStockService {
      * @return 包含分頁公司股票數據的 {@link PageResult}。
      */
     public PageResult<CompanyStockDto> getAllStocksWithPageMysql(int page, int size) {
-        Pageable pageable = PageRequest.of(page, size); // 定義分頁規則
-        Page<CompanyStockDto> stockPage  = companyStockMysqlRepository.findAllDto(pageable);
-        int totalPages = stockPage.getTotalPages();   // 總頁數
-        long totalElements = stockPage.getTotalElements(); // 總記錄數
+        //Pageable pageable = PageRequest.of(page, size); // 定義分頁規則
+        List<CompanyStockDto> stockPage  = mysqlDBMapper.findCompanyStockPage((page+1)*size ,size);
+        long totalElement = mysqlDBMapper.findCompanyStockCount(); // 總記錄數
+        long totalPages = totalElement/size;   // 總頁數
         log.info(LogUtil.info(2,"getAllStocksWithPageMysql",
-                "totalPages:"+totalPages+",totalElements:"+totalElements+",size:"+stockPage.getSize()));
-        return PageConverter.convertToPageResult(stockPage); // 查詢所有公司股票並進行分頁
+                "totalPages:"+totalPages+",totalElements:"+totalElement+",size:"+size));
+        return PageConverter.convertToPageResult(stockPage,  totalElement,  (int)totalPages,  page,  size); // 查詢所有公司股票並進行分頁
     }
     /**
      * 批量插入公司股票數據到 PostgreSQL。
@@ -77,21 +74,15 @@ public class CompanyStockService {
      * @throws Exception 如果插入過程中發生任何錯誤。
      */
     @Transactional(rollbackFor = Exception.class,value= "postgresTransactionManager")
-    public void insertBatch(String companyName) throws Exception{
+    public void insertBatchForPostgres(String companyName) throws Exception{
         long start = System.currentTimeMillis();
         List<CompanyStockApiDto> list = fmpApi.searchCompany(companyName);
-        long searchCompanyEnd = System.currentTimeMillis();
-        List<CompanyStockPostgresPo> listAll = list.parallelStream().map(CompanyStockPostgresPo::new).toList();
-        long count = companyStockPostgresRepository.count();
-        long insertBatchStart = System.currentTimeMillis();
-        companyStockPostgresRepository.insertBatch(listAll);
-        long insertBatchEnd = System.currentTimeMillis();
-        log.info(LogUtil.info(LogUtil.GATE_FRONT,"insertBatch","searchCompany消耗時間:"+(searchCompanyEnd-start)+",insert前的count:"+count
-                +",jpaInsertBatch消耗時間:"+(insertBatchEnd-insertBatchStart)+",筆數:"+listAll.size()));
-//        Assert.isTrue(false,"測試");
-        companyStockPostgresRepository.insertBatchFromJdbc(listAll);
+        List<CompanyStockPostgresPo> listAll = list.parallelStream().map(companyStock -> new CompanyStockPostgresPo(companyStock)).collect(Collectors.toList());
+        long count = postgresDBMapper.findCompanyStockCount();
+        long insertStart = System.currentTimeMillis();
+        postgresDBMapper.insertBatchCompanyStock(listAll);
         long end = System.currentTimeMillis();
-        log.info(LogUtil.info(LogUtil.GATE_FRONT,"postgresInsertBatchFromJdbc","消耗時間:"+(end-insertBatchEnd)));
+        log.info(LogUtil.info(LogUtil.GATE_FRONT,"insertBatchForMysql","searchCompany消耗時間:"+(insertStart-start)+",count:"+count+",insertBatch消耗時間:"+(end-insertStart)+",筆數:"+listAll.size()));
     }
     /**
      * 從 PostgreSQL 中以分頁方式檢索所有公司股票數據。
@@ -101,12 +92,11 @@ public class CompanyStockService {
      * @return 包含分頁公司股票數據的 {@link PageResult<CompanyStockDto>}。
      */
     public PageResult<CompanyStockDto> getAllStocksWithPagePostgres(int page, int size) {
-        Pageable pageable = PageRequest.of(page, size); // 定義分頁規則
-        Page<CompanyStockDto> stockPage  = companyStockPostgresRepository.findAllDto(pageable);
-        int totalPages = stockPage.getTotalPages();   // 總頁數
-        long totalElements = stockPage.getTotalElements(); // 總記錄數
-        log.info(LogUtil.info(2,"getAllStocksWithPagePostgres",
-                "totalPages:"+totalPages+",totalElements:"+totalElements+",size:"+stockPage.getSize()));
-        return PageConverter.convertToPageResult(stockPage); // 查詢所有公司股票並進行分頁
+        List<CompanyStockDto> stockPage  = postgresDBMapper.findCompanyStockPage((page+1)*size ,size);
+        long totalElement = postgresDBMapper.findCompanyStockCount(); // 總記錄數
+        long totalPages = totalElement/size;   // 總頁數
+        log.info(LogUtil.info(2,"getAllStocksWithPageMysql",
+                "totalPages:"+totalPages+",totalElements:"+totalElement+",size:"+size));
+        return PageConverter.convertToPageResult(stockPage,  totalElement,  (int)totalPages,  page,  size); // 查詢所有公司股票並進行分頁
     }
 }
